// Common proto definitions corresponding to all P4 programs.

syntax = "proto3";

package p4;

message Range {
  int32 low = 1;
  int32 high = 2;
}

message LPM {
  bytes value = 1;
  int32 prefix_len = 2;
}

message Ternary {
  bytes mask = 1;
  bytes value = 2;
}
